# talkshow

./: .gitignore  LICENSE  README.md  icons-preview.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
.opencode/plans/: 2026-04-04-floating-window-performance-design.md  2026-04-04-floating-window-performance.md
docs/: VERTEX_PROGRESS.md  hotkey-research.md  vertex-ai-audio-unsupported-issue.md
docs/superpowers/plans/: 2026-03-28-audio-recording.md  2026-03-28-models-page.md  2026-03-28-notification-sound.md  2026-03-28-recording-indicator-fix.md  2026-03-28-recording-indicator.md  2026-03-28-settings-page.md  2026-03-28-tray-shortcut-window-toggle.md  (+50 more)
scripts/: generate-icons.sh  test_api_latency.py
src/: app.css  app.html  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  audio_control.rs  clipboard.rs  commands.rs  config.rs  indicator.rs  keyring_store.rs  lib.rs  llm_client.rs  logger.rs  main.rs  pipeline.rs  real_llm_client.rs  recording.rs  sensevoice.rs  shortcuts.rs  skills.rs  translation.rs
src-tauri/src/config/: io.rs  mod.rs
src-tauri/src/health/: mod.rs
src-tauri/src/macos/: floating_panel.rs  mod.rs
src-tauri/src/providers/: dashscope.rs  mod.rs  openai.rs  sensevoice.rs  vertex.rs  zhipu.rs
src-tauri/src/sensevoice/: bundled_paths.rs  download.rs  engine.rs  mod.rs
src-tauri/tests/: config_persistence.rs  ipc_contracts.rs  skills_pipeline.rs  translation_flow.rs
src-tauri/tests/common/: mod.rs
src/routes/: +layout.svelte  +page.svelte
(+114 files in other folders)
