[package]
name = "talkshow"
version = "0.1.0"
description = "Let your thoughts flow."
authors = ["xia jia<xiajia@vip.qq.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "talkshow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rig-core = "0.33"
rig-vertexai = "0.3"
arboard = "3"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
dasp_sample = "0.11"
hound = "3.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray", "load-dynamic"] }
ndarray = "0.17"
rubato = "0.15"
reqwest = { version = "0.12", features = ["stream"] }
sentencepiece = "0.13"
futures-util = "0.3"
regex = "1"
kaldi-native-fbank = "0.1"
async-trait = "0.1"
keyring = "3"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"

[dev-dependencies]
mockall = "0.13"
tempfile = "3"

